syntax = "proto3";

package accounts.captcha.get.response;

enum Error {
    TOO_MANY_REQUESTS = 0;
    SERVER_ERROR = 1;
}

message Success {
    bytes image_data = 1;
    string token = 2;
}

message Response {
  oneof response_field {
    Error error = 1;
    Success success = 2;
  }
}

